# Enterprise-Knowledge-Assistant

./: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/models/: schemas.py
api/routes/: ingest.py  query.py
app/: main.py
db/: init_db.py  schema.sql
evaluation/: run_eval.py
evaluation/dataset/: qa_pairs.json
evaluation/results/: red_team_20260716_101843.json
src/cache/: query_cache.py
src/config/: settings.py
src/evaluation/: evaluator.py  metrics.py  red_team.py
src/generation/: generator.py  prompts.py
src/guardrails/: faithfulness_guard.py  injection_guard.py  pii_filter.py  pipeline.py  topic_guard.py
src/ingestion/: chunker.py  embedder.py  pipeline.py
src/ingestion/loaders/: base_loader.py  docx_loader.py  pdf_loader.py  web_loader.py
src/retrieval/: hybrid_search.py  reranker.py
tests/: conftest.py  test_generation.py  test_guardrails.py  test_ingestion.py  test_retrieval.py
